--- a/css/main.css
+++ b/css/main.css
@@ -23,5 +23,15 @@ body {
     background-color: var(--element-bg);
     border-radius: 20px;
     padding: 30px 50px;
-    max-width: 40%;
+    max-width: 500px;
+    min-width: 300px;
+}
+.btn-link {
+    font-size: smaller;
+    border: none;
+    background-color: inherit;
+    text-decoration: none;
+}
+.collapsing {
+    display: none;
 }
