--- a/css/main.css
+++ b/css/main.css
@@ -35,3 +35,24 @@ body {
 .collapsing {
     display: none;
 }
+.custom-cols {
+    background-color: var(--element-bg);
+    border-radius: 10px;
+    padding: 15px;
+    margin: 10px;
+}
+.btn-dashboard {
+    border: none;
+    width: 100%;
+    text-align: left;
+    padding: 7px;
+}
+.productSoldStat, .averageStockStat {
+    background-color: var(--lighter-bg);
+    padding: 5px;
+    border-radius: 5px;
+}
+.averageStockStat {
+    background-color: var(--med-bg);
+    color: var(--text-bg);
+}
