--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
     color: var(--main-bg);
     font-weight: 500;
 }
+/* Login Page */
 .container-custom {
     background-color: var(--element-bg);
     border-radius: 20px;
@@ -35,7 +36,13 @@ body {
 .collapsing {
     display: none;
 }
-.custom-cols {
+.form-control:focus {
+    border-color: var(--lighter-bg);
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem var(--med-bg);
+}
+/* Clerk Dashboard Page */
+.custom-dash-cols {
     background-color: var(--element-bg);
     border-radius: 10px;
     padding: 15px;
@@ -53,6 +60,21 @@ body {
     border-radius: 5px;
 }
 .averageStockStat {
+    background-color: var(--med-bg);
+    color: var(--text-bg);
+}
+/* Category Page */
+.catg-cols {
+    margin: 10px;
+    background-color: var(--element-bg);
+    padding: 5px;
+    border-radius: 10px;
+    min-width: 300px;
+}
+.catg-cols:nth-child(even) {
+    background-color: var(--lighter-bg);
+}
+.catg-cols:nth-child(3n) {
     background-color: var(--med-bg);
     color: var(--text-bg);
 }
