--- a/css/main.css
+++ b/css/main.css
@@ -33,9 +33,6 @@ body {
     background-color: inherit;
     text-decoration: none;
 }
-.collapsing {
-    display: none;
-}
 .form-control:focus {
     border-color: var(--lighter-bg);
     outline: 0;
@@ -69,12 +66,20 @@ body {
     background-color: var(--element-bg);
     padding: 5px;
     border-radius: 10px;
-    min-width: 300px;
-}
-.catg-cols:nth-child(even) {
-    background-color: var(--lighter-bg);
+    width: 300px;
+    font-weight: 500;
 }
 .catg-cols:nth-child(3n) {
+    background-color: var(--lighter-bg);
+}
+.catg-cols:nth-child(even) {
     background-color: var(--med-bg);
     color: var(--text-bg);
 }
+.category-form {
+    margin-top: 100px;
+}
+.form-check-input {
+    border-color: var(--main-bg)
+}
+
