completed index.php, made changes to bootstrap for button size, added img settings to main.css, changed header so the login button actually links to the login page

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,9 @@ body {
     color: var(--main-bg);
     font-weight: 500;
 }
+img{
+    max-height: 400px;
+}
 /* Login Page */
 .container-custom {
     background-color: var(--element-bg);
@@ -82,4 +85,3 @@ body {
 .form-check-input {
     border-color: var(--main-bg)
 }
-
