modified styling for add product
changed styling for add product view

added:
new css class
divs to the newProduct view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -113,3 +113,9 @@ body {
 .med-custom-bg {
     background-color: var(--med-bg);
 }
+
+.productForm{
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
